styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

h1,
h2,
h3,
h4,
h5,
h6,
p,
div,
span {
  @apply text-white;
}
.btn {
  @apply text-white;
}

.btn-primary {
  @apply bg-gradient-to-r from-[#0062FE] to-[#01F8F9] text-white border-0;
}

.animate__animated.animate__pulse {
  --animate-duration: 200ms;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
input[type="number"] {
  -moz-appearance: textfield;
}

:root {
  @apply bg-black;
}

